css/style.css
/* Sizing */
:root{
  --maximum: 1280px;
  --bp-mobile: 768px;

  --rounded: 12px;
}

.left {float: left;}
.right {float: right;}
.center {
  margin-left: auto;
  margin-right: auto;
}

.top-24 {margin-top: 24px;}
.top-16 {margin-top: 16px;}
.top-12 {margin-top: 12px;}

.bottom-24 {margin-bottom: 24px;}
.bottom-16 {margin-bottom: 16px;}
.bottom-12 {margin-bottom: 12px;}

.block {
  display: block;
}

.flex {display: flex;}
.flex-down {
  display: flex;
  flex-direction: column;
}
.flex-align-center {justify-content: center;}


/* Colors */
:root{
  --white: #fff;
  --black: #000;

  --beige-10: #FDFAF0;
  --beige-20: #F6F2E5;
  --beige-30: #E3E7BE;

  --gray-80: #2D3536;
  --gray-70: #2D474C;

  --blue-50: #004FE8;

  --pastel-blue: #A6D1EF;
  --pastel-grape: #AAB8EA;
  --pastel-purple: #C3AAED;
  --pastel-pink: #E5A6EF;
  --pastel-red: #EAAAB6;
  --pastel-orange: #EDBEAA;
  --pastel-yellow: #E9EAAA;
  --pastel-lime: #BFEAAA;
  --pastel-turquoise: #AAEDD5;
}

/* Typography */
  body {
    color: var(--gray-70);
    font-weight: 400;
    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  }

  .align-left {text-align: left;}
  .align-center {text-align: center;}
  .align-right {text-align: right;}

  .text-xxxxl{
    font-size: 64px;
    line-height: 80px;
    letter-spacing: 0.48px;
    font-family: "SF Pro Display";
  }
  .text-xxxl{
    font-size: 48px;
    line-height: 64px;
    letter-spacing: 0.48px;
    font-family: "SF Pro Display";
  }
  .text-xxl{
    font-size: 36px;
    line-height: 48px;
    letter-spacing: 0.48px;
    font-family: "SF Pro Display";
  }
  .text-xl{
    font-size: 28px;
    line-height: 36px;
    letter-spacing: 0.36px;
    font-family: "SF Pro Display";
  }
  .text-l{
    font-size: 20px;
    line-height: 28px;
    letter-spacing: -0.28px;
    font-family: "SF Pro Display";
  }
  .text-body{
    font-size: 16px;
    line-height: 20px;
    letter-spacing: -0.13px;
    font-family: "SF Pro Display";
  }
  .text-s{
    font-size: 14px;
    line-height: 20px;
    letter-spacing: -0.15px;
    font-family: "SF Pro Display";
  }

  .header {
    color: var(--gray-80);
    font-weight: 800;
  }
  .subheader {
    color: var(--gray-70);
    font-weight: 800;
  }

  a {
    text-decoration: none;
    color: var(--blue-50);
  }

  a.icon-link {
    display: block;
    height: 24px;
    width: 24px;
    padding: 8px;
    border-radius: 20px;
    }
    a.icon-link:active {background-color: rgba(0,0,0,0.1);}

/* Buttons */
.button-primary {
  font-size: 20px;
  line-height: 24px;
  font-weight: 700;
  background-color: var(--blue-50);
  border-radius: var(--rounded);
  color: var(--white);
  padding: 16px 24px;
  height: 24px;
}

/* Header */
.menu {
  max-width: var(--maximum);
  margin: 0 auto;
  padding: 0 16px;
  height: 56px;
  line-height: 56px;
  display: block;
}

#new-listing {padding: 18px 0;}
#new-listing-mobile {
  height: 40px;
  padding: 8px 0;
  }

/* Main */
body {
  background-color: var(--beige-10);
}

svg.icon {
  width: 24px;
	height: 24px;
  display: block;
}

.hero {
  max-width: var(--maximum);
  height: 480px;
  margin: 0 auto;
}

#grid {
  max-width: var(--maximum);
  margin: 0 auto 16px auto;
  display: flex;
  flex-flow: row wrap;
}

#grid li a {
  position: relative;
  display: block;
  padding: 32px 32px 0 32px;
  margin: 0 16px 32px 16px;
  border-radius: var(--rounded);
  }
  #grid li:nth-child(9n-8) a {background-color: var(--pastel-blue);}
  #grid li:nth-child(9n-7) a {background-color: var(--pastel-grape);}
  #grid li:nth-child(9n-6) a {background-color: var(--pastel-purple);}
  #grid li:nth-child(9n-5) a {background-color: var(--pastel-pink);}
  #grid li:nth-child(9n-4) a {background-color: var(--pastel-red);}
  #grid li:nth-child(9n-3) a {background-color: var(--pastel-orange);}
  #grid li:nth-child(9n-2) a {background-color: var(--pastel-yellow);}
  #grid li:nth-child(9n-1) a {background-color: var(--pastel-lime);}
  #grid li:nth-child(9n) a {background-color: var(--pastel-turquoise);}

  #grid li a:visited h2 {
    var(--gray-70);
  }

  #grid li a .company-name {color: var(--gray-70);}
  #grid li a .tag {
    color: var(--gray-70);
    background-color: rgba(0,0,0,0.1);
    padding: 8px;
    border-radius: 8px;
    display: inline-block;
    margin-left: -8px;
    margin-bottom: 32px;
  }

/* Footer */
footer {
  background-color: var(--beige-20);
  }
  footer ul {
    max-width: var(--maximum);
    margin: 0 auto;
    padding: 48px 32px;
  }
  footer p {margin-bottom: 24px;}

.signature-text {display: block;}

.personal-logo {
  height: 40px;
  width: 120px;
  margin: 16px 0 0 0;
  display: inline-block;
  }
  .personal-logo a {float:left;}
  /*.personal-logo svg:nth-child(2) {margin: 0 16px;}*/

.square{fill:#f23b55;}
.circle{fill:#009de6;}
.triangle{fill:#ffd200;}

/* Above Mobile */
@media screen and (min-width: 768px){
  .hero {
    display: flex;
    flex-direction: column;
  }
  #grid li {
    height: 352px;
    width: 320px;
    min-width: 320px;
    flex: 1 1 1;
    }
    #grid li a {
      height: 288px;
      margin: 0 16px 32px 16px;
    }
    #grid li a::after {
      position: absolute;
      bottom: 0;
      left: 0;
      height: 64px;
      width: 100%;
      content: "Learn more";
      text-align: center;
      line-height: 64px;
      font-size: 20px;
      letter-spacing: -0.28px;
      color: var(--gray-70);
      background-color: rgba(0,0,0,0.1);
      border-radius: 0 0 var(--rounded) var(--rounded);
    }

  footer ul{display: flex;}

  footer p:last-child {margin-bottom: 0;}

  #about {flex-basis: 50%;}

  #signature {
    flex-basis: 50%;
    text-align: right;
  }

  .personal-logo {margin-right: -8px;}

  .desktop-hide {display: none;}
}

@media screen and (max-width: 1279px){
  #grid li {width: 33.3%;}
}
@media screen and (max-width: 959px){
  #grid li {width: 50%;}
}
@media screen and (max-width: 767px){
  .text-xxxxl{
    font-size: 48px;
    line-height: 64px;
  }
  .text-xxxl{
    font-size: 36px;
    line-height: 48px;
  }

  .menu {padding-right: 8px;}

  .hero {
    height: auto;
    padding: 48px 0;
  }

  #grid li {width: 100%;}
  #grid li a {margin: 0 16px 16px 16px;}

  .personal-logo {margin-left: -8px;}

  .mobile-hide {display: none;}
}

